--- a/assets/ide.css
+++ b/assets/ide.css
@@ -9,6 +9,10 @@ a, a:hover, a:focus, a:visited, button, button:hover, button:focus {
 	margin-right: 0;
 }
 
+.hide {
+	display: none;
+}
+
 html, body {
 	margin: 0;
 	padding: 0;
@@ -105,9 +109,22 @@ body {
 	display: inline-block;
 }
 
+.tabs a span.mini-spacing-icon {
+	width: 8px;
+	display: inline-block;
+}
+
 .tabs a span.add-icon {
 	display: inline-block;
-	background-image:  url("https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/pequeno/page_white_add.png");
+	background-image: url("https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/pequeno/page_white_add.png");
+	width: 16px;
+	height: 16px;
+	vertical-align: -2px;
+}
+
+.tabs a span.open-icon {
+	display: inline-block;
+	background-image: url("https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/e6a740fa71ac0ce224c9b49424146fbd7f75f47a/src/br/univali/ps/ui/icones/pequeno/folder_closed.png");
 	width: 16px;
 	height: 16px;
 	vertical-align: -2px;
