--- a/assets/ide.css
+++ b/assets/ide.css
@@ -63,8 +63,8 @@ body {
 }
 
 .tbb[disabled], .tbb[disabled]:hover {
-	border: 1px solid #333;
-	background-color: #444;
+	border: 0 none transparent;
+	background-color: #263238;
 }
 
 .title {
@@ -97,7 +97,7 @@ body {
 	margin-left: 2px;
 }
 
-.tabs a {
+.tabs a, .tabs > li > span.action {
 	padding: 5px 10px;
 	display: inline-block;
 	background: rgb(68,80,86);
@@ -115,7 +115,7 @@ body {
 	display: inline-block;
 }
 
-.tabs a span.add-icon {
+.tabs > li > span.action > span.add-icon {
 	display: inline-block;
 	background-image: url("https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/pequeno/page_white_add.png");
 	width: 16px;
@@ -123,7 +123,7 @@ body {
 	vertical-align: -2px;
 }
 
-.tabs a span.open-icon {
+.tabs > li > span.action > span.open-icon {
 	display: inline-block;
 	background-image: url("https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/e6a740fa71ac0ce224c9b49424146fbd7f75f47a/src/br/univali/ps/ui/icones/pequeno/folder_closed.png");
 	width: 16px;
@@ -131,16 +131,23 @@ body {
 	vertical-align: -2px;
 }
 
-.tabs a span.portugol-icon {
+.tabs a span.portugol-icon, .tabs a span.help-icon {
 	display: inline-block;
-	background-image: url("https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/pequeno/light_pix_off.png");
 	width: 16px;
 	height: 16px;
 	vertical-align: -2px;
 }
 
+.tabs a span.portugol-icon {
+	background-image: url("https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/pequeno/light_pix_off.png");
+}
+
 .tabs a.active span.portugol-icon {
 	background-image: url("https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/pequeno/light_pix.png");
+}
+
+.tabs a span.help-icon, .tabs a.active span.help-icon {
+	background-image: url("https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/pequeno/help.png");
 }
 
 .tabs a span.close-icon {
@@ -151,9 +158,15 @@ body {
 	vertical-align: -2px;
 }
 
-.tabs a.active, .tab {
-	background-color: #263238;
-	color: #FFF;
+.tabs a.active, .tabs span.active, .tab {
+	background-color: #263238 !important;
+	color: #FFF !important;
+}
+
+.tabs > li > span.action {
+	padding-left: 6px;
+	padding-right: 6px;
+	cursor: pointer;
 }
 
 .tab {
@@ -161,6 +174,13 @@ body {
 	margin: 0 5px 5px 5px;
 	padding: 7px;
 	height: calc(100% - 60px)
+}
+
+.tab iframe {
+	width: 100%;
+	height: 100%;
+	display: block;
+	border: 0 none transparent;
 }
 
 .tab-content {
