Implementar Ajuda + Atualizar o Portugol-Console (UTF-8 :D) Desculpe pela alta quantidade de gambiarras Ainda falta mais uma pra carregar os HTML's corretamente

--- a/assets/ide.css
+++ b/assets/ide.css
@@ -218,3 +218,7 @@ body {
 #btl button:hover, #btl a:hover {
 	background-color: rgba(0,0,0,.1);
 }
+
+.dp-highlighter {
+	pointer-events: initial !important;
+}
