--- a/assets/ide.css
+++ b/assets/ide.css
@@ -4,9 +4,51 @@ a, a:hover, a:focus, a:visited, button, button:hover, button:focus {
 	outline-color: transparent;
 }
 
+.alert-res {
+	z-index: 9999;
+	width: 100%;
+	height: 100%;
+	background-color: #263238;
+
+}
+
+.alert-res-content {
+	width: 100%;
+	height: 100%;
+	display: table;
+}
+
+.alert-res .alert-res-content span {
+	font-size: 28px;
+	color: #FFF;
+	text-align: center;
+	padding: 0 10px;
+	display: table-cell;
+	vertical-align: middle;
+}
+
+.alert-res .alert-res-close {
+	font-size: 16px;
+	text-align: center;
+	padding: 10px 5px;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+
+.alert-res .alert-res-close a {
+	color: #CCC;
+}
+
 .row {
 	margin-left: 0;
 	margin-right: 0;
+}
+
+.col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
+	padding-left: 0;
+	padding-right: 0;
 }
 
 .hide {
@@ -131,7 +173,7 @@ body {
 
 .tabs > li > span.action > span.open-icon {
 	display: inline-block;
-	background-image: url("https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/e6a740fa71ac0ce224c9b49424146fbd7f75f47a/src/br/univali/ps/ui/icones/pequeno/folder_closed.png");
+	background-image: url("https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/pequeno/folder_closed.png");
 	width: 16px;
 	height: 16px;
 	vertical-align: -2px;
@@ -238,4 +280,20 @@ body {
 
 #btl button:hover, #btl a:hover {
 	background-color: rgba(0,0,0,.1);
+}
+
+#tab-inicio .tab-content {
+	display: flex;
+	flex-direction: column;
+}
+
+#exp {
+	flex: 1;
+	flex-grow: 1;
+	width: 100%;
+	display: block;
+}
+
+.row-exemplo-editor {
+	height: calc(100% - 52px);
 }
