[WIP] Renderização em tempo real
Agora o código é temporariamente armazenado em um arquivo temporário dentro da pasta /temp.
Quando compilado ele é enviado por sockets.
**BUGS**:
- Erros do Portugol não são enviados por sockets
- Inserir um aguarde quebra a detecção de inputs
**TODO**:
- Embora seja possível detectar os inputs, ainda não descobri uma maneira de colocar um trigger de resposta dentro da função do socket responsável pela manutenção do pedido.
- Inserir bloqueio de certas bibliotecas
- Reestruturar o código para ficar limpo

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,15 +16,16 @@
         <input type="submit" value="Enviar código">
     </form>
     <br><br><br>
-    <form id="input_response" method="POST" action='#'>
-      <input type="text" name="in-resp" id="in-resp" placeholder="Resposta do input: ">
-      <input type="submit" value="Enviar resposta">
-    </form>
+
     <br><br>
     <form id="disconnect" method="POST" action="#">
         <input type="submit" value="Desconectar">
     </form>
     <h2>Respostas:</h2>
     <div id="log"></div>
+    <form id="input_response" method="POST" action='#' style="display: none;">
+      <input type="text" name="in-resp" id="in-resp" placeholder="Resposta do input: ">
+      <input type="submit" value="Enviar resposta">
+    </form>
 </body>
 </html>
