--- a/views/index.twig
+++ b/views/index.twig
@@ -1,42 +1,44 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
-    <title>Portugol SocketIO Test</title>
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
+  <title>Portugol SocketIO Test</title>
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
+  <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
 </head>
+
 <body>
-    <h1>Teste de Portugol</h1>
-    <h2>Enviar:</h2>
-    <form id="emit" method="POST" action='#'>
-        <textarea name="emit_data" id="emit_data" placeholder="Código em Portugol" rows="10" cols="100"></textarea><br>
-        <input type="submit" value="Enviar código">
-    </form>
-    <br><br><br>
+  <h1>Teste de Portugol</h1>
+  <h2>Enviar:</h2>
+  <form id="emit" method="POST" action='#'>
+    <textarea name="emit_data" id="emit_data" placeholder="Código em Portugol" rows="10" cols="100"></textarea><br>
+    <input type="submit" value="Enviar código">
+  </form>
+  <br><br><br>
 
-    <h2>Respostas:</h2>
-    <div id="log"></div>
-    <script>
-    // Connect to the socket.io server
-    var socket = io.connect('http://127.0.0.1:3000');
+  <h2>Respostas:</h2>
+  <div id="log"></div>
+  <script>
+    $(document).ready(function() {
+      var socket = io.connect(location.protocol + '//' + document.domain + ':' + location.port);
 
-    // Wait for data from the server
-    socket.on('output', function (data) {
-      // Insert some line breaks where they belong
+      // Wait for data from the server
+      socket.on('output', function(data) {
+        // Insert some line breaks where they belong
         data = data.replace("\n", "<br>");
         data = data.replace("\r", "<br>");
         // Append the data to our terminal
         $('#log').append(data);
+      });
+
+      // Listen for user input and pass it to the server
+      $('form#emit').submit(function(event) {
+        event.preventDefault();
+        socket.emit('input', $('#emit_data').val() + "\r");
+        return false;
+      });
     });
-
-    // Listen for user input and pass it to the server
-    $(document).on("keypress",function(e){
-      var char = "";
-      char = String.fromCharCode(e.which);
-
-      socket.emit("input", char);
-    });
-
-    </script>
+  </script>
 </body>
+
 </html>
