Fazer a IDE funcionar com os sockets, atualizar bibliotecas, ajeitar o Ajuda, melhorar umas outras coisas

--- a/public/assets/editor/ide.css
+++ b/public/assets/editor/ide.css
@@ -217,6 +217,10 @@ body {
 	cursor: pointer;
 }
 
+.tabs > li > span.action:last-child {
+	padding-right: 10px;
+}
+
 .tab {
 	flex-grow: 1;
 	margin: 0 5px 5px 5px;
