--- a/public/assets/editor/ide.css
+++ b/public/assets/editor/ide.css
@@ -301,3 +301,18 @@ body {
 .row-exemplo-editor {
 	height: calc(100% - 52px);
 }
+
+#splash {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	display: block;
+	z-index: 99999;
+	background-color: #263238;
+	padding-left: 25px;
+	padding-top: 15px;
+}
