--- a/views/editor/tab.twig
+++ b/views/editor/tab.twig
@@ -1,4 +1,8 @@
 {% include "editor/meta.twig" %}
+<div id="splash">
+	<p>Carregando...</p>
+</div>
+
 <div data-ax5layout="editor-ax" data-config="{layout:'dock-panel'}" class="ide-layout" id="layout">
 	<div class="tbar" data-dock-panel="{dock:'left',split:false,height:250,minHeight:250,maxHeight:250,width:64,minWidth:64,maxWidth:64}">
 		<button class="tbb submit" id="submit-btn">
