Alterado cor de fundo

--- a/public/assets/landing/css/main.css
+++ b/public/assets/landing/css/main.css
@@ -1019,7 +1019,7 @@ input.text:focus {
 
 .hero-home {
 	background-image: url("/assets/landing/img/back.jpg");
-	background-color: #523129;
+	background-color: #5c6164;
 	min-height: 400px;
 }
 
