Mudado cor dos botões

--- a/views/index.twig
+++ b/views/index.twig
@@ -25,6 +25,11 @@
 	.center-block {
 		float: none !important
 	}
+
+	.btn-flat {
+		color: #fff;
+		background: none;
+	}
 </style>
 
 <body>
@@ -47,13 +52,13 @@
 					</div>
 					<div>
 						<center>
-						<a class="btn btn-prepend external" href="/ide" style="margin-top: 5px;">
+							<a class="btn btn-prepend external" href="/ide" style="margin-top: 5px;">
 							<i class="prepended portugol-icon"></i>Começar a editar
 						</a>
-						<a class="btn btn-prepend external" href="http://bit.ly/2vwEcBc" target="_blank">
-							<i class="prepended icon-append-check"></i>Baixe o Portugol Studio
+						<a class="btn btn-flat external" href="http://bit.ly/2vwEcBc" target="_blank" style="background: none">
+							Baixe o Portugol Studio
 						</a>
-					</center>
+						</center>
 					</div>
 				</div>
 			</div>
@@ -104,8 +109,8 @@
 				<div class="col-md-6 center-block">
 					<h3 class="mb-15">História</h3>
 					<p class="smaller xs-mb-40 xs-mw" align="justify">
-						O Portugol Webstudio nasceu como uma adaptação do Portugol Studio, e a necessidade de torná-lo acessível em qualquer lugar. Como várias línguas de programação já possuem compiladores para navegadores, porquê não fazer um para o Portugol?<br>
-						Foi então que <a href="https://github.com/guiscaranse">@guiscaranse</a> e <a href="https://github.com/dgadelha">@dgadelha</a> junto com outros colaboradores construiram este projeto com o auxílio e poder do NodeJS.
+						O Portugol Webstudio nasceu como uma adaptação do Portugol Studio, e a necessidade de torná-lo acessível em qualquer lugar. Como várias línguas de programação já possuem compiladores para navegadores, porquê não fazer um para o Portugol?<br> Foi
+						então que <a href="https://github.com/guiscaranse">@guiscaranse</a> e <a href="https://github.com/dgadelha">@dgadelha</a> junto com outros colaboradores construiram este projeto com o auxílio e poder do NodeJS.
 				</div>
 
 			</div>
