Ajustado grids do bootstrap

--- a/views/index.twig
+++ b/views/index.twig
@@ -50,14 +50,18 @@
 							</center>
 						</div>
 					</div>
-					<div>
+					<div class="row">
 						<center>
-							<a class="btn btn-prepend external" href="/ide" style="margin-top: 5px;">
+							<div class="col-md-3 col-md-offset-3 col-xs-12">
+								<a class="btn btn-prepend external" href="/ide" style="margin-top: 5px;">
 							<i class="prepended portugol-icon"></i>Começar a editar
-						</a>
-						<a class="btn btn-flat external" href="http://bit.ly/2vwEcBc" target="_blank" style="background: none">
+							</a>
+							</div>
+							<div class="col-md-3 col-xs-12">
+								<a class="btn btn-flat external" href="http://bit.ly/2vwEcBc" target="_blank" style="background: none">
 							Baixe o Portugol Studio
 						</a>
+							</div>
 						</center>
 					</div>
 				</div>
