Adicionar botão de parar programa

--- a/views/editor/tab.twig
+++ b/views/editor/tab.twig
@@ -9,6 +9,10 @@
 			<img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/Dark/grande/resultset_next.png">
 		</button>
 
+		<button class="tbb stop" id="stop-btn" disabled="disabled">
+			<img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/Dark/grande/stop.png">
+		</button>
+
 		<button class="tbb save" id="save-btn">
 			<img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/Dark/grande/save_as.png">
 		</button>
