Trocar o atalho bibliotecas para código-fonte

--- a/views/editor/ide.twig
+++ b/views/editor/ide.twig
@@ -36,9 +36,9 @@
 						</a>
 					</div>
 					<div class="hidden-xs visible-md visible-lg col-xs-0 col-md-3 col-lg-3">
-						<a href="javascript:alert('Não implementado.')">
-							<img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/Dark/grande/lite/bibliotecas.png" class="img-responsive">
-							<span>Bibliotecas</span>
+						<a href="https://github.com/dgadelha/Portugol-Webstudio" target="_blank">
+							<img src="https://git-scm.com/images/logos/downloads/Git-Icon-White.png" style="max-height:100px;padding-top:5px;padding-bottom:5px" class="img-responsive">
+							<span>Código-fonte</span>
 						</a>
 					</div>
 				</div>
