Usar a barra de scroll quando necessário e aumentar a sidebar do Ajuda pra melhor visibilidade dos itens aninhados

--- a/views/editor/ajuda.twig
+++ b/views/editor/ajuda.twig
@@ -6,19 +6,19 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Portugol Webstudio - Ajuda</title>
 	<link rel="shortcut icon" href="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/Dark/grande/light-bulb.png">
-  <link rel="icon" href="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/Dark/grande/light-bulb.png">
+	<link rel="icon" href="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/Dark/grande/light-bulb.png">
 
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/ax5ui/ax5ui-layout/master/dist/ax5layout.css?7544f5a6f789ebaf83e5f070a19a881725c16b6f">
-  <link rel="stylesheet" type="text/css" href="/assets/editor/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.3/themes/default-dark/style.min.css" />
-  <link rel="stylesheet" type="text/css" href="/assets/editor/res.css">
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/ax5ui/ax5ui-layout/master/dist/ax5layout.css?d4a022954ed5f99c94b83e7ebbd6ec6755ea4248">
+	<link rel="stylesheet" type="text/css" href="/assets/editor/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.4/themes/default-dark/style.min.css" />
+	<link rel="stylesheet" type="text/css" href="/assets/editor/res.css">
 	<link rel="stylesheet" type="text/css" href="/assets/editor/portugol.css">
 	<link rel="stylesheet" type="text/css" href="/assets/editor/ide.css">
 </head>
 <body>
 	<div data-ax5layout="ax1" class="ax5layout" data-config="{layout:'dock-panel'}" id="layout">
-		<div data-dock-panel="{dock:'left',split:true,width:250,minWidth:100,maxWidth:350}" id="leftPanel">
+		<div data-dock-panel="{dock:'left',split:true,width:300,minWidth:100,maxWidth:450}" style="overflow-y:auto" id="leftPanel">
 			<div class="res-cat">
 				<img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/Dark/pequeno/help.png"> <span>Ajuda</span>
 			</div>
@@ -31,18 +31,14 @@
 		</div>
 	</div>
 	<script type="text/javascript"> window.TextEncoder = window.TextDecoder = null; </script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.3/jquery.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.5/ace.js"></script>
-  <script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5core/master/dist/ax5core.min.js?e2df1421a819efa43b46c0cab92940ef4410776d"></script>
-  <script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5ui-layout/master/dist/ax5layout.min.js?7544f5a6f789ebaf83e5f070a19a881725c16b6f"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/blob-polyfill/1.0.20150320/Blob.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.3/FileSaver.min.js"></script>
-  <script type="text/javascript" src="https://cdn.rawgit.com/inexorabletash/text-encoding/master/lib/encoding-indexes.js?192293ea17e775bdd6a66ab85db05f34c5104a34"></script>
-  <script type="text/javascript" src="https://cdn.rawgit.com/inexorabletash/text-encoding/master/lib/encoding.js?b8503e781cfe62c80582ff36ae467435baa35ba1"></script>
-  <script type="text/javascript" src="/assets/editor/mode-portugol.js"></script>
-  <script type="text/javascript" src="/assets/editor/portugol.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.3/jstree.min.js"></script>
-	<script type="text/javascript">var d={baseUrl:window.location.pathname + "/../", res:"ajuda"};</script>
+	<script type="text/javascript"> var d = { baseUrl: window.location.pathname + "/../", res: "ajuda" }; </script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.8/ace.js"></script>
+	<script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5core/master/dist/ax5core.min.js?33fc99de37d9184e6807b3f62cb3a64e9150975a"></script>
+	<script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5ui-layout/master/dist/ax5layout.min.js?d4a022954ed5f99c94b83e7ebbd6ec6755ea4248"></script>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.4/jstree.min.js"></script>
+	<script type="text/javascript" src="/assets/editor/mode-portugol.js"></script>
+	<script type="text/javascript" src="/assets/editor/portugol.js"></script>
 	<script type="text/javascript" src="/assets/editor/res-ajuda.js"></script>
 </body>
 </html>
