--- a/views/editor/ide.twig
+++ b/views/editor/ide.twig
@@ -45,7 +45,7 @@
 
 				<div class="row hidden-xs" id="exp">
 					<div data-ax5layout="ax1" class="ax5layout" data-config="{layout:'dock-panel'}" id="ax1">
-						<div data-dock-panel="{dock:'left',split:true,width:250,minWidth:200,maxWidth:400}" id="leftPanel">
+						<div data-dock-panel="{dock:'left',split:true,width:250,minWidth:200,maxWidth:400}" style="overflow-y:auto" id="leftPanel">
 							<div class="res-cat">
 								<img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/Dark/pequeno/light_pix.png"> <span>Exemplos</span>
 							</div>
