--- a/views/editor/scripts.twig
+++ b/views/editor/scripts.twig
@@ -11,7 +11,7 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.4/jstree.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.0/js/tooltip.min.js"></script>
-	<script type="text/javascript">$(document).ready(function(){$('[data-toggle="tooltip"]').tooltip();});
+	<script type="text/javascript">$(document).ready(function(){$('[data-toggle="tooltip"]').tooltip();});</script>
 	<script type="text/javascript">var d={baseUrl:((window.location.pathname.length<2)?"/":window.location.pathname+"/"),exemplo:{nome:false,codigo:false},tabs:[]};</script>
 	<script type="text/javascript" src="/assets/editor/mode-portugol.js"></script>
 	<script type="text/javascript" src="/assets/editor/portugol.js"></script>
