--- a/views/editor/scripts.twig
+++ b/views/editor/scripts.twig
@@ -10,7 +10,7 @@
 	<script type="text/javascript" src="https://cdn.rawgit.com/inexorabletash/text-encoding/master/lib/encoding.js?b98ab30bf27aef214ff19d0badfbf6f6323a1513"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.4/jstree.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
-	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.0/js/tooltip.min.js"></script>
+	<script type="text/javascript" src="/assets/js/tooltip.js"></script>
 	<script type="text/javascript">$(document).ready(function(){$('[data-toggle="tooltip"]').tooltip();});</script>
 	<script type="text/javascript">var d={baseUrl:((window.location.pathname.length<2)?"/":window.location.pathname+"/"),exemplo:{nome:false,codigo:false},tabs:[]};</script>
 	<script type="text/javascript" src="/assets/editor/mode-portugol.js"></script>
