Added "Fechar aba" tooltips

--- a/views/editor/tab.twig
+++ b/views/editor/tab.twig
@@ -5,15 +5,15 @@
 
 <div data-ax5layout="editor-ax" data-config="{layout:'dock-panel'}" class="ide-layout" id="layout">
 	<div class="tbar" data-dock-panel="{dock:'left',split:false,height:250,minHeight:250,maxHeight:250,width:64,minWidth:64,maxWidth:64}">
-		<button class="tbb submit" id="submit-btn">
+		<button data-toggle="tooltip" data-placement="bottom" title="Executar" class="tbb submit" id="submit-btn">
 			<img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/Dark/grande/resultset_next.png">
 		</button>
 
-		<button class="tbb stop" id="stop-btn" disabled="disabled">
+		<button data-toggle="tooltip" data-placement="bottom" title="Parar"  class="tbb stop" id="stop-btn" disabled="disabled">
 			<img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/Dark/grande/stop.png">
 		</button>
 
-		<button class="tbb save" id="save-btn">
+		<button data-toggle="tooltip" data-placement="bottom" title="Salvar" class="tbb save" id="save-btn">
 			<img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/src/br/univali/ps/ui/icones/Dark/grande/save_as.png">
 		</button>
 	</div>
