Fazer os links abrirem de forma correta

--- a/views/index.twig
+++ b/views/index.twig
@@ -103,7 +103,7 @@
 
 				<div class="col-sm-3">
 					<h3 class="mb-15">Código-Aberto</h3>
-					<p class="smaller xs-mb-40 xs-mw">Nos ajude a expandir e melhorar cada vez mais a plataforma. <strong><a href="https://github.com/dgadelha/Portugol-Webstudio">Acesse o repositório no GitHub!</a></strong></p>
+					<p class="smaller xs-mb-40 xs-mw">Nos ajude a expandir e melhorar cada vez mais a plataforma. <strong><a href="https://github.com/dgadelha/Portugol-Webstudio" target="_blank">Acesse o repositório no GitHub!</a></strong></p>
 				</div>
 
 				<div class="col-sm-1">
@@ -121,7 +121,7 @@
 					<h3 class="mb-15">História</h3>
 					<p class="smaller xs-mb-40 xs-mw" align="justify">
 						O Portugol Webstudio nasceu como uma adaptação do Portugol Studio, e a necessidade de torná-lo acessível em qualquer lugar. Como várias línguas de programação já possuem compiladores para navegadores, porquê não fazer um para o Portugol?<br> Foi
-						então que <a href="https://github.com/guiscaranse">@guiscaranse</a> e <a href="https://github.com/dgadelha">@dgadelha</a> junto com outros colaboradores construiram este projeto com o auxílio e poder do NodeJS.</p>
+						então que <a href="https://github.com/guiscaranse" target="_blank">@guiscaranse</a> e <a href="https://github.com/dgadelha" target="_blank">@dgadelha</a> junto com outros colaboradores construiram este projeto com o auxílio e poder do NodeJS.</p>
 				</div>
 			</div>
 		</div>
@@ -129,7 +129,7 @@
 
 	<div class="footer text-center">
 		<p class="fmenu">
-			<a href="https://github.com/dgadelha/Portugol-Webstudio">GITHUB</a> | <a href="https://github.com/dgadelha/Portugol-Webstudio/blob/master/LICENSE">LICENÇA</a>
+			<a href="https://github.com/dgadelha/Portugol-Webstudio" target="_blank">GITHUB</a> | <a href="https://github.com/dgadelha/Portugol-Webstudio/blob/master/LICENSE" target="_blank">LICENÇA</a>
 		</p>
 	</div>
 
