Adicionado menção ao zeit

--- a/views/index.twig
+++ b/views/index.twig
@@ -128,9 +128,10 @@
 	</div>
 
 	<div class="footer text-center">
-		<p class="fmenu">
-			<a href="https://github.com/dgadelha/Portugol-Webstudio" target="_blank">GITHUB</a> | <a href="https://github.com/dgadelha/Portugol-Webstudio/blob/master/LICENSE" target="_blank">LICENÇA</a>
-		</p>
+        <p class="fmenu">
+            <a href="https://github.com/dgadelha/Portugol-Webstudio" target="_blank">GITHUB</a> | <a href="https://github.com/dgadelha/Portugol-Webstudio/blob/master/LICENSE" target="_blank">LICENÇA</a><br>
+            <center>Hospedado por <a href="https://zeit.co/" target="_blank" style="text-decoration: none;">▲ ZEIT Now</a></center>
+        </p>
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
