--- a/views/editor/ajuda.twig
+++ b/views/editor/ajuda.twig
@@ -9,9 +9,9 @@
     <link rel="icon" href="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/grande/light-bulb.png">
 
     <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/ax5ui/ax5ui-layout/master/dist/ax5layout.css?d4a022954ed5f99c94b83e7ebbd6ec6755ea4248">
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/ax5ui/ax5ui-layout/master/dist/ax5layout.css?63a81582da43cf03fb027cf2a841ee742bfe1c28">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.5/themes/default-dark/style.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/editor/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.4/themes/default-dark/style.min.css" />
     <link rel="stylesheet" type="text/css" href="/assets/editor/res.css">
     <link rel="stylesheet" type="text/css" href="/assets/editor/portugol.css">
     <link rel="stylesheet" type="text/css" href="/assets/editor/ide.css">
@@ -30,13 +30,14 @@
             <iframe src="" id="mainFrame"></iframe>
         </div>
     </div>
+
     <script type="text/javascript"> window.TextEncoder = window.TextDecoder = null; </script>
     <script type="text/javascript"> var d = { baseUrl: window.location.pathname + "/../", res: "ajuda" }; </script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.8/ace.js"></script>
-    <script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5core/master/dist/ax5core.min.js?33fc99de37d9184e6807b3f62cb3a64e9150975a"></script>
-    <script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5ui-layout/master/dist/ax5layout.min.js?d4a022954ed5f99c94b83e7ebbd6ec6755ea4248"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.4/jstree.min.js"></script>
+    <script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5core/master/dist/ax5core.min.js?72f2e6bd922a88ab130fe72264615a2acd0de5d8"></script>
+    <script type="text/javascript" src="https://cdn.rawgit.com/ax5ui/ax5ui-layout/master/dist/ax5layout.min.js?63a81582da43cf03fb027cf2a841ee742bfe1c28"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.5/jstree.min.js"></script>
     <script type="text/javascript" src="/assets/editor/mode-portugol.js"></script>
     <script type="text/javascript" src="/assets/editor/portugol.js"></script>
     <script type="text/javascript" src="/assets/editor/res-ajuda.js"></script>
