--- a/views/index.twig
+++ b/views/index.twig
@@ -1,49 +1,37 @@
-<!DOCTYPE html>
-<!--[if lte IE 9]><html class="no-js is-ie"><![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js">
-<!--<![endif]-->
+<!doctype html>
+<html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+    <title>Portugol Webstudio – IDE do Portugol em seu navegador</title>
+
+    <meta name="description" content="IDE de código aberta para códigos em Portugol, baseado no Portugol Studio para entregar uma experiência completa.">
+    <meta name="keywords" content="tools,portugol,univali,online,webstudio,studio,código,aprender,opensource,github" />
+    <meta name="robots" content="index,follow">
+
+    <meta property="og:title" content="Portugol Webstudio" />
+    <meta property="og:description" content="IDE de código aberta para códigos em Portugol, baseado no Portugol Studio para entregar uma experiência completa." />
+    <meta property="og:url" content="https://portugol-webstudio.now.sh/" />
+
     <link rel="shortcut icon" href="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/grande/light-bulb.png">
     <link rel="icon" href="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/grande/light-bulb.png">
-    <title>Portugol Webstudio – IDE do Portugol em seu navegador</title>
-    <meta name="description" content="IDE de código aberta para códigos em Portugol, baseado no Portugol Studio para entregar uma experiência completa.">
-    <meta name="keywords" content="tools, portugol, univali, online, webstudio, studio, código, aprender, opensource, github" />
-    <meta name="robots" content="index,follow">
-    <meta property="og:title" content="Portugol Webstudio " />
-    <meta property="og:locale" content="en_US" />
-    <meta property="og:description" content="IDE de código aberta para códigos em Portugol, baseado no Portugol Studio para entregar uma experiência completa." />
-    <meta property="og:url" content="https://portugol-webstudio.github.io/" />
-    <link rel=stylesheet href="./assets/landing/css/main.css">
-    <!--[if lte IE 8]>
-    <link rel=stylesheet href="/assets/landing/css/ie.css">
-    <![endif]-->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <script src="./assets/landing/js/vendor/modernizr.js"></script>
-    <script src="./assets/landing/js/vendor/respond.min.js"></script>
+
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha256-916EbMg70RQy9LHiGkXzG8hSg9EdNy97GazNG/aiY1w=" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous">
+    <link rel="stylesheet" href="/assets/landing.css">
+
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-104682425-1', 'auto');
-      ga('send', 'pageview');
-
+        ga('create', 'UA-104682425-1', 'auto');
+        ga('send', 'pageview');
     </script>
-    <style>
-        .center-block {
-            float: none !important
-        }
-
-        .btn-flat {
-            color: #fff;
-            background: none;
-        }
-    </style>
 </head>
 <body>
     <div class="level level-hero hero-home has-hint">
@@ -55,7 +43,7 @@
                     <div class="row">
                         <div class="col-md-6 center-block">
                             <center>
-                                <img src="./assets/landing/img/logo.svg" height="100px" style="margin:0">
+                                <img src="/assets/landing/logo.svg" class="m-10" height="100px">
                                 <div class="subheading mb-20 lead">IDE de código aberto para programar em Portugol direto de seu navegador.</div>
                             </center>
                         </div>
@@ -64,13 +52,13 @@
                     <div class="row">
                         <center>
                             <div class="col-md-3 col-md-offset-3 col-xs-12">
-                                <a class="btn btn-prepend external" href="/ide" style="margin-top:5px">
+                                <a class="btn btn-prepend external" href="/ide" class="mt-5">
                                     <i class="prepended portugol-icon"></i>Começar a editar
                                 </a>
                             </div>
 
                             <div class="col-md-3 col-xs-12">
-                                <a class="btn btn-flat external" href="http://bit.ly/2vwEcBc" target="_blank" style="background: none">Baixe o Portugol Studio</a>
+                                <a class="btn btn-flat external" href="http://bit.ly/2vwEcBc" target="_blank">Baixe o Portugol Studio</a>
                             </div>
                         </center>
                     </div>
@@ -121,7 +109,8 @@
                     <h3 class="mb-15">História</h3>
                     <p class="smaller xs-mb-40 xs-mw" align="justify">
                         O Portugol Webstudio nasceu como uma adaptação do Portugol Studio, e a necessidade de torná-lo acessível em qualquer lugar. Como várias línguas de programação já possuem compiladores para navegadores, porquê não fazer um para o Portugol?<br> Foi
-                        então que <a href="https://github.com/guiscaranse" target="_blank">@guiscaranse</a> e <a href="https://github.com/dgadelha" target="_blank">@dgadelha</a> junto com outros colaboradores construiram este projeto com o auxílio e poder do NodeJS.</p>
+                        então que <a href="https://github.com/guiscaranse" target="_blank" rel="external">@guiscaranse</a> e <a href="https://github.com/dgadelha" target="_blank" rel="external">@dgadelha</a> junto com outros colaboradores construiram este projeto com o auxílio e poder do Node.js.
+                    </p>
                 </div>
             </div>
         </div>
@@ -129,18 +118,12 @@
 
     <div class="footer text-center">
         <p class="fmenu">
-            <a href="https://github.com/dgadelha/Portugol-Webstudio" target="_blank">GITHUB</a> | <a href="https://github.com/dgadelha/Portugol-Webstudio/blob/master/LICENSE" target="_blank">LICENÇA</a><br>
-            <center>Hospedado por <a href="https://zeit.co/" target="_blank" style="text-decoration: none;">▲ ZEIT Now</a></center>
+            <a href="https://github.com/dgadelha/Portugol-Webstudio" target="_blank" rel="external">GITHUB</a> | <a href="https://github.com/dgadelha/Portugol-Webstudio/blob/master/LICENSE" target="_blank" rel="external">LICENÇA</a><br>
+            <center>Hospedado por <a class="no-decoration" href="https://zeit.co/" target="_blank" rel="external">▲ ZEIT Now</a></center>
         </p>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script>
-        window.jQuery || document.write('<script src="/assets/landing/js/vendor/jquery-1.11.1.min.js"><\/script>')
-    </script>
-
-    <script src="./assets/landing/js/bootstrap.min.js"></script>
-    <script src="./assets/landing/js/dropdown.js"></script>
-    <script src="./assets/landing/js/main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+    <script src="/assets/landing.js"></script>
 </body>
 </html>
