--- a/views/editor/ajuda.twig
+++ b/views/editor/ajuda.twig
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/editor/ide.css">
 </head>
 <body>
-    <div data-ax5layout="ax1" class="ax5layout" data-config="{layout:'dock-panel'}" id="layout">
+    <div data-ax5layout="ax1" class="ax5layout" data-config="{layout:'dock-panel',splitter:{size:6}}" id="layout">
         <div data-dock-panel="{dock:'left',split:true,width:300,minWidth:100,maxWidth:450}" style="overflow-y:auto" id="leftPanel">
             <div class="res-cat">
                 <img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/pequeno/help.png"> <span>Ajuda</span>
