--- a/public/assets/editor/res.css
+++ b/public/assets/editor/res.css
@@ -41,30 +41,32 @@ body {
 
 .res-cat {
     display: block;
-    background-color: rgb(38, 50, 56);
+    background-color: #121E24;
     margin: 7.5px;
     padding: 7.5px 10px;
     font-size: 14px;
     vertical-align: middle;
 }
 
-.res-cat-link {
-    text-align: center;
-    color: rgb(255, 194, 0);
-    font-size: 16px;
-    padding: 6px 10px;
-    background-color: #1e282c;
+.res-cat-wide {
+    margin: 0;
 }
 
-.res-cat-link:focus {
-    color: rgb(255, 194, 0);
-    background-color: #1e282c;
+.res-cat-link, .res-cat-link:focus {
+    float: right;
+    border-radius: 3px;
+    text-align: center;
+    background-color: rgb(255, 194, 0);
+    font-size: 16px;
+    padding: 6px 10px;
+    color: #1e282c;
     text-decoration: none;
+    margin-bottom: 0;
 }
 
 .res-cat-link:hover {
     color: #FFF;
-    background-color: #2e383c;
+    background-color: #263238;
     text-decoration: none;
 }
 
@@ -85,6 +87,10 @@ body {
     background: transparent;
     margin: 0px 15px;
     padding: 0;
+}
+
+.jstree-wide {
+    margin: 7.5px;
 }
 
 .jstree-default-dark .jstree-anchor {
@@ -117,11 +123,9 @@ body {
     background-color: rgb(68, 80, 86);
 }
 
-#exc-content {
+#exc {
     display: block;
-    width: calc(100% - 10px);
-    height: calc(100% - 10px);
-    margin: 5px auto;
-    padding: 5px;
-    background-color: rgb(58, 70, 76);
+    width: 100%;
+    height: 100%;
+    background-color: #121E24;
 }
