--- a/views/editor/ide.twig
+++ b/views/editor/ide.twig
@@ -9,68 +9,51 @@
 
     <div id="ide" class="hidden-xs">
         <ul class="tabs">
-            <li><a id="anchor-inicio" href="#tab-inicio">Portugol Webstudio <span class="portugol-icon"></span></a></li>
-            <li title="Abrir"><span class="action action-open"><span class="open-icon"></span></span></li>
-            <li title="Novo"><span class="action action-add"><span class="add-icon"></span></span></li>
+            <li><a id="anchor-inicio" href="#tab-inicio"><span class="portugol-icon"></span> Portugol Webstudio</a></li><li id="tab-add" title="Novo"><span class="action action-add">+</span></li>
         </ul>
 
         <div class="tab" id="tab-inicio">
             <div class="tab-content">
-                <div class="row" id="btl">
-                    <div class="col-xs-6 col-md-3 col-lg-3">
-                        <button class="action-add">
-                            <img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/grande/lite/programar.png" class="img-responsive">
-                            <span>Programar</span>
-                        </button>
-                    </div>
-                    <div class="hidden-xs visible-md visible-lg col-xs-0 col-md-3 col-lg-3">
-                        <button class="action-ajuda">
-                            <img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/grande/lite/ajuda.png" class="img-responsive">
-                            <span>Ajuda</span>
-                        </button>
-                    </div>
-                    <div class="col-xs-6 col-md-3 col-lg-3">
-                        <a href="https://www.youtube.com/user/portugolstudio" target="_blank" rel="nofollow">
-                            <img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/grande/lite/videoaulas.png" class="img-responsive">
-                            <span>Videoaulas</span>
-                        </a>
-                    </div>
-                    <div class="hidden-xs visible-md visible-lg col-xs-0 col-md-3 col-lg-3">
-                        <a href="https://github.com/dgadelha/Portugol-Webstudio" target="_blank">
-                            <img src="https://git-scm.com/images/logos/downloads/Git-Icon-White.png" style="max-height:100px;padding-top:5px;padding-bottom:5px" class="img-responsive">
-                            <span>Código-fonte</span>
-                        </a>
-                    </div>
-                </div>
+                <div data-ax5layout="ax1" class="ax5layout" data-config="{layout:'dock-panel',splitter:{size:6}}" id="ax1">
+                    <div data-dock-panel="{dock:'center'}" id="exc">
+                        <div class="row" id="btl">
+                            <button class="action-add">
+                                <img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/grande/newfile.png" class="img-responsive">
+                                <span>Novo Arquivo</span>
+                            </button>
 
-                <div class="row hidden-xs" id="exp">
-                    <div data-ax5layout="ax1" class="ax5layout" data-config="{layout:'dock-panel'}" id="ax1">
-                        <div data-dock-panel="{dock:'left',split:true,width:250,minWidth:200,maxWidth:400}" style="overflow-y:auto" id="leftPanel">
-                            <div class="res-cat">
-                                <img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/pequeno/light_pix.png"> <span>Exemplos</span>
-                            </div>
+                            <button class="action-open">
+                                <img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/grande/openfile.png" class="img-responsive">
+                                <span>Abrir Arquivo</span>
+                            </button>
 
-                            <div class="jstree"></div>
+                            <button class="action-ajuda">
+                                <img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/grande/help.png" class="img-responsive">
+                                <span>Ajuda</span>
+                            </button>
+
+                            <a href="https://github.com/dgadelha/Portugol-Webstudio" target="_blank">
+                                <img src="https://git-scm.com/images/logos/downloads/Git-Icon-White.png" style="max-height:64px" class="img-responsive">
+                                <span>Código-fonte</span>
+                            </a>
                         </div>
 
-                        <div data-dock-panel="{dock:'center'}" id="exc">
-                            <div id="exc-content">
-                                <div class="row row-exemplo-desc">
-                                    <div class="col-xs-9 col-md-9 col-lg-9">
-                                        <div class="res-cat" id="exemplo-desc-holder">
-                                            <span id="exemplo-desc">Selecione um exemplo ao lado para ver a descrição.</span>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-xs-3 col-md-3 col-lg-3">
-                                        <a class="res-cat res-cat-link hide" id="exemplo-go" href="#"><span>Explorar Exemplo</span></a>
-                                    </div>
-                                </div>
-
-                                <div class="row row-exemplo-editor hide">
-                                    <pre id="exemplo-editor" class="input"></pre>
-                                </div>
+                        <div class="row row-exemplo-desc hidden-xs">
+                            <div class="res-cat" id="exemplo-desc-holder">
+                                <span id="exemplo-desc">Selecione um exemplo ao lado para ver a descrição.</span>
                             </div>
+
+                            <a class="res-cat res-cat-link hide" id="exemplo-go" href="#"><span>Explorar Exemplo</span></a>
+                        </div>
+                    </div>
+
+                    <div data-dock-panel="{dock:'right',split:true,width:250,minWidth:200,maxWidth:400}" class="hidden-xs" style="overflow-y:auto" id="leftPanel">
+                        <div class="res-cat res-cat-wide">
+                            <img src="https://raw.githubusercontent.com/UNIVALI-LITE/Portugol-Studio/master/ide/src/main/resources/br/univali/ps/ui/icones/Dark/pequeno/light_pix.png"> <span>Exemplos</span>
+                        </div>
+
+                        <div class="res-content">
+                            <div class="jstree jstree-wide"></div>
                         </div>
                     </div>
                 </div>
